syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AvatarFetterInfo.proto";

// CmdId: 1777
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarFetterDataNotify {
	map<uint64, AvatarFetterInfo> fetter_info_map = 1;
}
