syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1704
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AvatarFetterLevelRewardReq {
	uint64 avatar_guid = 15;
	uint32 fetter_level = 2;
}
